--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="https://makemyinteriors.in/">Home</a></li>
-                                        <li><a href="#services">Services</a></li>
+                                        <li><a class="scrollto" href="#services">Services</a></li>
                                         <li><a href="work">Our Work</a></li>
                                         <li><a href="about">About us</a></li>
-                                        <li><a href="#contact">Contact us</a></li>
+                                        <li><a href="#contact">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -269,8 +269,7 @@
                             <h1 data-animation="fadeInUp " data-delay=".2s ">Lets Make your Interior Better</h1>
                             <p data-animation="fadeInUp " data-delay=".6s ">Interior work is not just a physical apperance, It contains emotions, efforts and choices people bring their hard earned money and we provide them best possible interior designing solutions. We not only focus on building bussiness
                                 but also maintaining relationships.</p>
-                            <a href="# " class="btn hero-btn " data-animation="fadeInUp " data-delay="1s ">Explore Our
-                                Services</a>
+
                         </div>
                         <div class="hero-img position-relative ">
                             <script type="text/javascript " style="display:none ">
@@ -398,7 +397,10 @@
         </section>
 
 
+
         <div class="testimonial-area section-padding ">
+
+
             <div class="container ">
 
                 <div class="row d-flex justify-content-center ">
@@ -410,16 +412,19 @@
                                 <div class="testimonial-caption ">
                                     <div class="testimonial-top-cap ">
                                         <img data-cfsrc="assets/img/gallery/testi-logo.png " alt=" " data-pagespeed-url-hash="403092385 " onload="pagespeed.CriticalImages.checkImageForCriticality(this); " style="display:none;visibility:hidden; "><noscript><img
-                                                src="assets/img/gallery/testi-logo.png " alt=" "
-                                                data-pagespeed-url-hash="403092385 "
-                                                onload="pagespeed.CriticalImages.checkImageForCriticality(this); "></noscript>
-                                        <p>"Make my Interiora were great. They really took the time to understand my style and helped me express myself in my home. The team's attention to detail was phenomenal. They did an amazing job blending my old and
-                                            new furniture and decor. I'd definitely recommend them.</p>
+                                        src="assets/img/gallery/testi-logo.png " alt=" "
+                                        data-pagespeed-url-hash="403092385 "
+                                        onload="pagespeed.CriticalImages.checkImageForCriticality(this); "></noscript>
+                                        <p>Wonderful to work with, very professional team and very accommodating to the client... They have an amazing gift to transform your home from ordinary to outstanding.. Many designers blow the budget and force you
+                                            into styles that don't fit your personality. But these people stayed in budget. I highly recommend!!</p>
                                     </div>
 
                                     <div class="testimonial-founder  ">
                                         <div class="founder-img">
-                                            <span>- Ashish Pawar</a></span>
+                                            <span>- Miss. Sonam Borhade</a></span>
+                                        </div>
+                                        <div class="founder-img">
+                                            <span>Society: Kumar Picaso, Pune.</a></span>
                                         </div>
                                     </div>
                                 </div>
@@ -430,16 +435,19 @@
                                 <div class="testimonial-caption ">
                                     <div class="testimonial-top-cap">
                                         <img data-cfsrc="assets/img/gallery/testi-logo.png" alt="" data-pagespeed-url-hash="403092385" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
-                                                src="assets/img/gallery/testi-logo.png" alt=""
-                                                data-pagespeed-url-hash="403092385"
-                                                onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
-                                        <p>"Make My Interiors team has turned out flat into a dream home. I would definitely recommend it to others. Bhushan, Kiran and the team is very professional and working with them was fun!!! They very well understood
-                                            our requirements in design and budget perspective and provided the best possible within the agreed timeline </p>
+                                        src="assets/img/gallery/testi-logo.png" alt=""
+                                        data-pagespeed-url-hash="403092385"
+                                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                        <p>Make My Interiors team has turned out flat into a dream home. I would definitely recommend it to others. Bhusan, Kiran and the team is very professional and working with them was fun!!! They very well understood
+                                            our requirements in design and budget perspective and provided the best possible within the agreed timeline :)</p>
                                     </div>
 
                                     <div class="testimonial-founder  ">
                                         <div class="founder-img">
-                                            <span>- Kriti Shukla</span>
+                                            <span>- Mrs. Kriti Shukla</span>
+                                        </div>
+                                        <div class="founder-img">
+                                            <span>Society: Yashwin Encore, Pune.</span>
                                         </div>
                                     </div>
                                 </div>
@@ -450,15 +458,106 @@
                                 <div class="testimonial-caption ">
                                     <div class="testimonial-top-cap">
                                         <img data-cfsrc="assets/img/gallery/testi-logo.png" alt="" data-pagespeed-url-hash="403092385" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
-                                                src="assets/img/gallery/testi-logo.png" alt=""
-                                                data-pagespeed-url-hash="403092385"
-                                                onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
-                                        <p>"Great interior designer, I loved there work because that is according to the committed time as they proposed.</p>
+                                        src="assets/img/gallery/testi-logo.png" alt=""
+                                        data-pagespeed-url-hash="403092385"
+                                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                        <p>Just one phrase after completion of my interior and that is So far so Good. I am highly satisfied with the final outcome. I will recommend Make My Interior, there staff were organised, helpful and friendly.</p>
                                     </div>
 
                                     <div class="testimonial-founder  ">
                                         <div class="founder-img">
-                                            <span>- Sahil Madavi</span>
+                                            <span>- Mr. Vikas Kumar</span>
+                                        </div>
+                                        <div class="founder-img">
+                                            <span>Society: Yashone, Pune.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="single-testimonial text-center">
+
+                                <div class="testimonial-caption ">
+                                    <div class="testimonial-top-cap">
+                                        <img data-cfsrc="assets/img/gallery/testi-logo.png" alt="" data-pagespeed-url-hash="403092385" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/testi-logo.png" alt=""
+                                        data-pagespeed-url-hash="403092385"
+                                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                        <p>Great interior designer, I loved there work because that is according to the committed time as they proposed.</p>
+                                    </div>
+
+                                    <div class="testimonial-founder  ">
+                                        <div class="founder-img">
+                                            <span>- Mr. Sahil Madavi</span>
+                                        </div>
+                                        <div class="founder-img">
+                                            <span>Society: ARV Imperia, Pune.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="single-testimonial text-center">
+
+                                <div class="testimonial-caption ">
+                                    <div class="testimonial-top-cap">
+                                        <img data-cfsrc="assets/img/gallery/testi-logo.png" alt="" data-pagespeed-url-hash="403092385" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                                        src="assets/img/gallery/testi-logo.png" alt=""
+                                        data-pagespeed-url-hash="403092385"
+                                        onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                        <p>Highly Recommended I had such a great experience working with Make my Interiors designer. Bhushan understood my vision and style right away. Everything was delivered on time. Super pleased with the results and would
+                                            highly recommend MMI Team to anyone looking to improve their spaces.</p>
+                                    </div>
+
+                                    <div class="testimonial-founder  ">
+                                        <div class="founder-img">
+                                            <span>- Mr. Pravin Ashikar</span>
+                                        </div>
+                                        <div class="founder-img">
+                                            <span>Society: Cappricio, Pune.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single-testimonial text-center">
+                                <div class="testimonial-caption ">
+                                    <div class="testimonial-top-cap">
+                                        <img data-cfsrc="assets/img/gallery/testi-logo.png" alt="" data-pagespeed-url-hash="403092385" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                            src="assets/img/gallery/testi-logo.png" alt=""
+                            data-pagespeed-url-hash="403092385"
+                            onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                        <p>Make my Interiors has an amazing team to transform your home from ordinary to outstanding! From design to execution team makes it fun and even exhilarating. Really happy for your outstanding service. Thanks Make
+                                            My Interiors team for making my Dream Home</p>
+                                    </div>
+
+                                    <div class="testimonial-founder  ">
+                                        <div class="founder-img">
+                                            <span>- Mr. Kamaljeet Singh</span>
+                                        </div>
+                                        <div class="founder-img">
+                                            <span>Society: Rachna Eternia, Pune.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="single-testimonial text-center">
+                                <div class="testimonial-caption ">
+                                    <div class="testimonial-top-cap">
+                                        <img data-cfsrc="assets/img/gallery/testi-logo.png" alt="" data-pagespeed-url-hash="403092385" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="display:none;visibility:hidden;"><noscript><img
+                            src="assets/img/gallery/testi-logo.png" alt=""
+                            data-pagespeed-url-hash="403092385"
+                            onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></noscript>
+                                        <p>Marvellous work !! Really appreciated the work completed , friendly in nature and suggesting lots of ideas. Best interior designer, really happy and satisfied.</p>
+                                    </div>
+
+                                    <div class="testimonial-founder  ">
+                                        <div class="founder-img">
+                                            <span>- Mr. Kalpesh Borade</span>
+                                        </div>
+                                        <div class="founder-img">
+                                            <span>Society: VTP Urban Nest, Pune.</span>
                                         </div>
                                     </div>
                                 </div>
@@ -466,7 +565,9 @@
                         </div>
                     </div>
                 </div>
+
             </div>
+            </a>
         </div>
 
         <section id="work" class="work">
@@ -604,7 +705,7 @@
                                         <a href="https://www.facebook.com/MakeMyInteriorsPune"><i class="fab fa-facebook-f"></i></a>
                                         <a href="https://www.instagram.com/makemyinteriors/"><i class="fa-brands fa-instagram"></i></a>
                                         <a href="https://www.youtube.com/makemyinteriors"><i class="fab fa-youtube"></i></a>
-
+                                        <a href="https://www.google.com/maps/place/Make+My+Interiors+Pvt.+Ltd/@18.4532454,73.8911507,15z/data=!4m5!3m4!1s0x0:0xbba9c06a02d7a138!8m2!3d18.4532454!4d73.8911507"><i class="fa-brands fa-google"></i></a>
                                     </div>
                                 </div>
                             </div>
