--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                     <div class="container">
                         <h2>Bhushan Dehadray</h2>
                         <p class="title">CEO &amp; Founder</p>
-                        <p>Bhshan is a professional interior designer with great Sense of resposibility , Work ethics and integrity .He believes in providing Best quality work within timeline . He work hard to make this organisation realiable and trustworthy
+                        <p>Bhushan is a professional interior designer with great Sense of resposibility , Work ethics and integrity .He believes in providing Best quality work within timeline . He work hard to make this organisation realiable and trustworthy
                             . He Value and respects the Hard earned Money of his Clients and deliver Best possible Interior designing Services.</p>
                         <!-- <p>example@example.com</p>
                     <p><button class="button">Contact</button></p> -->
