--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div class="slider-cap-wrapper ">
                         <div class="hero-caption ">
                             <h1 data-animation="fadeInUp " data-delay=".2s ">Lets Make your Interior Better</h1>
-                            <p data-animation="fadeInUp " data-delay=".6s ">Interior work is not just a physical apperance, It contains emotions, efforts and choices people bring their hard earned money and we provide them best possible interior designing solutions. We not only focus on building bussiness
+                            <p data-animation="fadeInUp " data-delay=".6s ">Interior work is not just a physical apperance, It contains emotions, efforts and choices. People bring their hard earned money and we provide them best possible interior designing solutions. We not only focus on building bussiness
                                 but also maintaining relationships.</p>
 
                         </div>
