changes in gallery section

--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="https://makemyinteriors.in/">Home</a></li>
-                                        <li><a href="https://makemyinteriors.in/#services">Services</a></li>
+                                        <li><a href="https://makemyinteriors.in/#service">Services</a></li>
                                         <li><a href="work">Our Work</a></li>
                                         <li><a href="about">About us</a></li>
 
@@ -64,7 +64,7 @@
             </div>
             <div class="row justify-content-center mb-5" data-aos="fade">
                 <div id="filters" class="filters text-center button-group col-md-7">
-                    <button class="btn btn-primary active" data-filter="*">All</button>
+                    <!-- <button class="btn btn-primary active" data-filter="*">All</button> -->
                     <button class="btn btn-primary" data-filter=".modkit">Modular Kitchen</button>
                     <button class="btn btn-primary" data-filter=".resid">Residential</button>
                     <button class="btn btn-primary" data-filter=".comm">Commercial</button>
