--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="https://makemyinteriors.in/">Home</a></li>
-                                        <li><a href="https://makemyinteriors.in/#services">Services</a></li>
+                                        <li><a href="https://makemyinteriors.in/#service">Services</a></li>
                                         <li><a href="work">Our Work</a></li>
                                         <li><a href="about">About us</a></li>
 
