--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="https://makemyinteriors.in/">Home</a></li>
-                                        <li><a class="scrollto" href="#services">Services</a></li>
+                                        <li><a class="scrollto" href="#service">Services</a></li>
                                         <li><a href="work">Our Work</a></li>
                                         <li><a href="about">About us</a></li>
                                         <li><a href="#contact">Contact</a></li>
@@ -292,7 +292,8 @@
         </div>
         <br>
         <br>
-        <section id="services " class="services ">
+
+        <section id="service" class="service">
             <section class="sercices-area section-padding ">
                 <div class="container ">
                     <div class="row justify-content-center ">
@@ -300,7 +301,7 @@
 
                             <div class="section-tittle text-center mb-60 ">
                                 <h2>What We Do</h2>
-                                <p>We have a Strategy for Serving Things Right
+                                <p>We make your spaces beautiful, functional and safe by understanding your requirements and selecting items like colors, lights, wallpapers and artifacts
                                 </p>
                             </div>
                         </div>
@@ -319,7 +320,7 @@
                                         <h3>
                                             <a href="# ">Modular Kitchen</a>
                                         </h3>
-                                        <p>The kitchen is where you put all the ingredients together. No matter what you do in life, you have to have a plan and put it together.</p>
+                                        <p>Every day start with the kitchen, and kitchen designing is soul of interior work . We design your kitchen with perfection and provide you with an attractive, affordable and safe one.</p>
                                     </div>
                                 </div>
                             </div>
@@ -335,7 +336,7 @@
                                     </div>
                                     <div class="properties__caption ">
                                         <h3><a href="# ">Residential Interior Designing</a></h3>
-                                        <p>It’s time to invest in yourself by investing in your home.</p>
+                                        <p>Space management, budget management and asthetic feel are our core principles while making your home. We design your dreams.</p>
                                     </div>
                                 </div>
                             </div>
@@ -351,7 +352,7 @@
                                     </div>
                                     <div class="properties__caption ">
                                         <h3><a href="# ">Commercial Interior Designing</a></h3>
-                                        <p>Great Work makes a Great office</p>
+                                        <p>Here, we focuses more the space breathe and functionality on making professionalism and functionality.</p>
                                     </div>
                                 </div>
                             </div>
@@ -360,6 +361,7 @@
                 </div>
             </section>
         </section>
+
 
 
         <section class="about-area ">
